--- a/automations/templates/run_automation.html
+++ b/automations/templates/run_automation.html
@@ -186,17 +186,25 @@
         })
     }
     async function pollAutomationStatus(){
-        const response = await fetch(`/check-automation-status/${automation_status}`)
-        const json_response = await response.json()
-        console.log(json_response)
-        if(json_response.status === "true"){
-            document.getElementById('set_variables').classList.add('hidden')
-            document.getElementById('automation_running').classList.add('hidden')
-            document.getElementById('automation_results').classList.remove('hidden')
-            console.log('Success')
-        }else{
-            await new Promise(resolve => setTimeout(resolve, 10000));
-            await pollAutomationStatus()
+        while (true) {
+            try {
+                const response = await fetch(`/check-automation-status/${automation_status}`);
+                const json_response = await response.json();
+                console.log(json_response);
+    
+                if (json_response.status === "true") {
+                    document.getElementById('set_variables').classList.add('hidden');
+                    document.getElementById('automation_running').classList.add('hidden');
+                    document.getElementById('automation_results').classList.remove('hidden');
+                    console.log('Success');
+                    break;
+                } else {
+                    await new Promise(resolve => setTimeout(resolve, 10000));
+                }
+            } catch (error) {
+                console.error('Error occurred while checking automation status:', error);
+                await new Promise(resolve => setTimeout(resolve, 10000));
+            }
         }
     }
 
